# OS

kp/: a.c  a.out  b.c  b.out  c.c  c.out  makefile  report.odt
os_lab_1/: report.odt
os_lab_2/doc/: report.odt
os_lab_2/src/: file  lab2.c
os_lab_3/doc/: report.odt
os_lab_3/src/: lab3v2.cpp
os_lab_4/doc/: report.odt
os_lab_4/src/: main.c
os_lab_5/doc/: report.odt
os_lab_5/src/: Tree.c  Tree.h  mainDyn.c  mainStat.c
os_lab_6/doc/: report.odt
os_lab_6/src/: CMakeLists.txt  calcNode.cpp  handlerNode.cpp  socketRoutine.cpp  socketRoutine.hpp
